--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"sanitize-html": "^2.13.1",
-		"svelte": "^5.0.5",
+		"svelte": "^5.30.1",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.12"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.8"
 	}
 }
